Removed "UseConcMarkSweepGC" from tests for Java compatibility